[frontend/backend] Application workflow #2